feat: Generate catalog in the form expected by SCO